# MAP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  pyproject.toml  ref_parsed.csv  requirements.txt
.github/workflows/: ci.yml
data/: acm_titles.txt  arxiv_papers.csv
data/parsed/: Q01MQ29tcGlsZXI6IEEgVW5pZmllZCBDb21waWxlciBmb3IgQ2xhc3NpY2FsIE1hY2hpbmUgTGVhcm5pbmc=.json  Q09QUjogQ29uc2lzdGVuY3ktT3JpZW50ZWQgUHJlLVJhbmtpbmcgZm9yIE9ubGluZSBBZHZlcnRpc2luZw==.json  Q09VUEE6IEFuIEluZHVzdHJpYWwgUmVjb21tZW5kZXIgU3lzdGVtIGZvciBPbmxpbmUgdG8gT2ZmbGluZSBTZXJ2aWNlIFBsYXRmb3Jtcw==.json  Q0FGRTogVG93YXJkcyBDb21wYWN0LCBBZGFwdGl2ZSwgYW5kIEZhc3QgRW1iZWRkaW5nIGZvciBMYXJnZS1zY2FsZSBSZWNvbW1lbmRhdGlvbiBNb2RlbHM=.json  Q0FNRTogQ29tcGV0aXRpdmVseSBMZWFybmluZyBhIE1peHR1cmUtb2YtRXhwZXJ0cyBNb2RlbCBmb3IgRmlyc3Qtc3RhZ2UgUmV0cmlldmFs.json  Q0FWaWFSOiBDb250ZXh0IEF3YXJlIFZpZGVvIFJlY29tbWVuZGF0aW9ucw==.json  Q0NNQjogQSBMYXJnZS1zY2FsZSBDaGluZXNlIENyb3NzLW1vZGFsIEJlbmNobWFyaw==.json  Q0w0Q1RSOiBBIENvbnRyYXN0aXZlIExlYXJuaW5nIEZyYW1ld29yayBmb3IgQ1RSIFByZWRpY3Rpb24=.json  Q1BGRDogQ29uZmlkZW5jZS1hd2FyZSBQcml2aWxlZ2VkIEZlYXR1cmUgRGlzdGlsbGF0aW9uIGZvciBTaG9ydCBWaWRlbyBDbGFzc2lmaWNhdGlvbg==.json  Q1NQTTogQSBDb250cmFzdGl2ZSBTcGF0aW90ZW1wb3JhbCBQcmVmZXJlbmNlIE1vZGVsIGZvciBDVFIgUHJlZGljdGlvbiBpbiBPbi1EZW1hbmQgRm9vZCBEZWxpdmVyeSBTZXJ2aWNlcw==.json  Q1Q0UmVjOiBTaW1wbGUgeWV0IEVmZmVjdGl2ZSBDb25zaXN0ZW5jeSBUcmFpbmluZyBmb3IgU2VxdWVudGlhbCBSZWNvbW1lbmRhdGlvbg==.json  Q1RSLURyaXZlbiBBZHZlcnRpc2luZyBJbWFnZSBHZW5lcmF0aW9uIHdpdGggTXVsdGltb2RhbCBMYXJnZSBMYW5ndWFnZSBNb2RlbHM=.json  Q1RSTDogQ29ubmVjdCBDb2xsYWJvcmF0aXZlIGFuZCBMYW5ndWFnZSBNb2RlbCBmb3IgQ1RSIFByZWRpY3Rpb24=.json  Q291bnRlcmFjdGluZyBEdXJhdGlvbiBCaWFzIGluIFZpZGVvIFJlY29tbWVuZGF0aW9uIHZpYSBDb3VudGVyZmFjdHVhbCBXYXRjaCBUaW1l.json  Q291bnRlcmZhY3R1YWwgU2l0dWF0aW9uIFRlc3Rpbmc6IFVuY292ZXJpbmcgRGlzY3JpbWluYXRpb24gdW5kZXIgRmFpcm5lc3MgZ2l2ZW4gdGhlIERpZmZlcmVuY2U=.json  Q29sbGFib3JhdGl2ZSBDcm9zcy1tb2RhbCBGdXNpb24gd2l0aCBMYXJnZSBMYW5ndWFnZSBNb2RlbCBmb3IgUmVjb21tZW5kYXRpb24=.json  Q29tcHV0YXRpb25hbCBUZWNobm9sb2dpZXMgZm9yIEZhc2hpb24gUmVjb21tZW5kYXRpb246IEEgU3VydmV5.json  Q29uZmlkZW5jZS1Bd2FyZSBNdWx0aS1GaWVsZCBNb2RlbCBDYWxpYnJhdGlvbg==.json  Q29uZmlkZW5jZSBSYW5raW5nIGZvciBDVFIgUHJlZGljdGlvbg==.json  Q29udGV4dC1iYXNlZCBGYXN0IFJlY29tbWVuZGF0aW9uIFN0cmF0ZWd5IGZvciBMb25nIFVzZXIgQmVoYXZpb3IgU2VxdWVuY2UgaW4gTWVpdHVhbiBXYWltYWk=.json  Q29udGV4dHVhbCBHZW5lcmF0aXZlIEF1Y3Rpb24gd2l0aCBQZXJtdXRhdGlvbi1sZXZlbCBFeHRlcm5hbGl0aWVzIGZvciBPbmxpbmUgQWR2ZXJ0aXNpbmc=.json  Q29udGVudC1CYXNlZCBDb2xsYWJvcmF0aXZlIEdlbmVyYXRpb24gZm9yIFJlY29tbWVuZGVyIFN5c3RlbXM=.json  Q29udGludWFsIExlYXJuaW5nIG9mIExhcmdlIExhbmd1YWdlIE1vZGVsczogQSBDb21wcmVoZW5zaXZlIFN1cnZleQ==.json  Q29udGludWFsIFRyYW5zZmVyIExlYXJuaW5nIGZvciBDcm9zcy1Eb21haW4gQ2xpY2stVGhyb3VnaCBSYXRlIFByZWRpY3Rpb24gYXQgVGFvYmFv.json  Q29udHJhc3RpdmUgR3JhcGggUHJvbXB0LXR1bmluZyBmb3IgQ3Jvc3MtZG9tYWluIFJlY29tbWVuZGF0aW9u.json  Q29udHJhc3RpdmUgTGVhcm5pbmcgZm9yIENvbnZlcnNpb24gUmF0ZSBQcmVkaWN0aW9u.json  Q29udHJhc3RpdmUgU2VsZi1zdXBlcnZpc2VkIExlYXJuaW5nIGluIFJlY29tbWVuZGVyIFN5c3RlbXM6IEEgU3VydmV5.json  Q29udHJvbGxhYmxlIE11bHRpLU9iamVjdGl2ZSBSZS1yYW5raW5nIHdpdGggUG9saWN5IEh5cGVybmV0d29ya3M=.json  Q29ycmVsYXRpdmUgUHJlZmVyZW5jZSBUcmFuc2ZlciB3aXRoIEhpZXJhcmNoaWNhbCBIeXBlcmdyYXBoIE5ldHdvcmsgZm9yIE11bHRpLURvbWFpbiBSZWNvbW1lbmRhdGlvbg==.json  Q2F1c2FsIERlY29uZm91bmRpbmcgdmlhIENvbmZvdW5kZXIgRGlzZW50YW5nbGVtZW50IGZvciBEdWFsLVRhcmdldCBDcm9zcy1Eb21haW4gUmVjb21tZW5kYXRpb24=.json  Q2F1c2FsIERlY2lzaW9uIFRyYW5zZm9ybWVyIGZvciBSZWNvbW1lbmRlciBTeXN0ZW1zIHZpYSBPZmZsaW5lIFJlaW5mb3JjZW1lbnQgTGVhcm5pbmc=.json  Q2F1c2FsIEluZmVyZW5jZSBpbiBSZWNvbW1lbmRlciBTeXN0ZW1zOiBBIFN1cnZleSBhbmQgRnV0dXJlIERpcmVjdGlvbnM=.json  Q2FsaWJyYXRpb24tY29tcGF0aWJsZSBMaXN0d2lzZSBEaXN0aWxsYXRpb24gb2YgUHJpdmlsZWdlZCBGZWF0dXJlcyBmb3IgQ1RSIFByZWRpY3Rpb24=.json  Q2FwdHVyaW5nIENvbnZlcnNpb24gUmF0ZSBGbHVjdHVhdGlvbiBkdXJpbmcgU2FsZXMgUHJvbW90aW9uczogQSBOb3ZlbCBIaXN0b3JpY2FsIERhdGEgUmV1c2UgQXBwcm9hY2g=.json  Q3JlYXRvci1TaWRlIFJlY29tbWVuZGVyIFN5c3RlbTogQ2hhbGxlbmdlcywgRGVzaWducywgYW5kIEFwcGxpY2F0aW9ucw==.json  (+347 more)
onepiece_rag/: settings.yaml
service/: app.py
util/: const.py  crawl.py  debugging_data.py  fileio.py  preprocess.py  process_paper.py  test_file.py
(+244 files in other folders)
